<resources>
    <string name="app_name">Colors</string>

    <string name="lbl_colors">Colors</string>
    <string name="lbl_reset1">Reset</string>
    <string name="lbl_close">Close app</string>

    <string name="lbl_transparent">Transparent</string>
    <string name="lbl_semitransparent">Semitransparent</string>
    <string name="lbl_opaque">Opaque</string>
    <string name="lbl_black">Black</string>
    <string name="lbl_white">White</string>
    <string name="lbl_red">Red</string>
    <string name="lbl_green">Green</string>
    <string name="lbl_blue">Blue</string>
    <string name="lbl_cyan">Cyan</string>
    <string name="lbl_magenta">Magenta</string>
    <string name="lbl_yellow">Yellow</string>
    <string name="lbl_aboutof">About of</string>

    <string name="ic_help">Help</string>
    <string name="ic_transparente">Transparente</string>

    <string name="lbl_help">Help</string>
    <string name="lbl_reset">Reset</string>

    <string name="lbl_boton">Boton</string>
</resources>
